fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -167,8 +167,8 @@ footer li {
     justify-content: center;
     align-items: center;
 }
-  #content {
-    width: 300px;
+#content {
+    width: 100%;
     height: 200px;
     /*background-color: #b4b8a6;*/
     opacity:1;
